Project

General

Profile

Actions

Bug #23121

closed

ceph-objectstore-tool: asserts when destroying SnapMapper::backend

Added by Kefu Chai about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-02-25T06:31:55.634 INFO:tasks.workunit.client.0.mira037.stderr: ceph version 13.0.1-2205-g39454a3 (39454a37557376f47ac2f02ad25caaf391b536c4) mimic (dev)
2018-02-25T06:31:55.634 INFO:tasks.workunit.client.0.mira037.stderr: 1: (()+0x931aa0) [0x55ac274daaa0]
2018-02-25T06:31:55.634 INFO:tasks.workunit.client.0.mira037.stderr: 2: (()+0x11390) [0x7f44cbd23390]
2018-02-25T06:31:55.635 INFO:tasks.workunit.client.0.mira037.stderr: 3: (gsignal()+0x38) [0x7f44caed4428]
2018-02-25T06:31:55.635 INFO:tasks.workunit.client.0.mira037.stderr: 4: (abort()+0x16a) [0x7f44caed602a]
2018-02-25T06:31:55.635 INFO:tasks.workunit.client.0.mira037.stderr: 5: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x266) [0x7f44cc
52cf96]
2018-02-25T06:31:55.635 INFO:tasks.workunit.client.0.mira037.stderr: 6: (Mutex::Lock(bool)+0x1d6) [0x7f44cc4fe896]
2018-02-25T06:31:55.635 INFO:tasks.workunit.client.0.mira037.stderr: 7: (std::_Sp_counted_deleter<boost::optional<ceph::buffer::list>*, SharedPtrRegistry<std:
:__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, boost::optional<ceph::buffer::list>, std::less<std::__cxx11::basic_string<char, s
td::char_traits<char>, std::allocator<char> > > >::OnRemoval, std::allocator<void>, (__gnu_cxx::_Lock_policy)2>::_M_dispose()+0x1d) [0x55ac2719d0ad]
2018-02-25T06:31:55.635 INFO:tasks.workunit.client.0.mira037.stderr: 8: (std::_Rb_tree<std::shared_ptr<boost::optional<ceph::buffer::list> >, std::shared_ptr<
boost::optional<ceph::buffer::list> >, std::_Identity<std::shared_ptr<boost::optional<ceph::buffer::list> > >, std::less<std::shared_ptr<boost::optional<ceph:
:buffer::list> > >, std::allocator<std::shared_ptr<boost::optional<ceph::buffer::list> > > >::_M_erase(std::_Rb_tree_node<std::shared_ptr<boost::optional<ceph::buffer::list> > >*)+0xaa) [0x55ac2719a9ba]
2018-02-25T06:31:55.635 INFO:tasks.workunit.client.0.mira037.stderr: 9: (ContainerContext<std::set<std::shared_ptr<boost::optional<ceph::buffer::list> >, std::less<std::shared_ptr<boost::optional<ceph::buffer::list> > >, std::allocator<std::shared_ptr<boost::optional<ceph::buffer::list> > > > >::~ContainerContext()+0x20) [0x55ac2719aa10]
2018-02-25T06:31:55.636 INFO:tasks.workunit.client.0.mira037.stderr: 10: (C_ContextsBase<Context, Context>::complete(int)+0x168) [0x55ac26fd4ae8]
2018-02-25T06:31:55.636 INFO:tasks.workunit.client.0.mira037.stderr: 11: (Finisher::finisher_thread_entry()+0x33f) [0x7f44cc52b41f]
2018-02-25T06:31:55.636 INFO:tasks.workunit.client.0.mira037.stderr: 12: (()+0x76ba) [0x7f44cbd196ba]
2018-02-25T06:31:55.636 INFO:tasks.workunit.client.0.mira037.stderr: 13: (clone()+0x6d) [0x7f44cafa641d]
2018-02-25T06:31:55.645 INFO:tasks.workunit.client.0.mira037.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/scrub/osd-scrub-snaps.sh: line 34: 141863 Aborted                 (core dumped) ceph-objectstore-tool --data-path $dir/0 --journal-path $dir/0/journal "$JSON" remove

/a/kchai-2018-02-25_02:17:51-rados-wip-kefu-testing-2018-02-25-0801-distro-basic-mira/2226229

Actions #1

Updated by Kefu Chai about 6 years ago

  • Subject changed from ceph-objectstore-tool: assert when destroying SnapMapper::backend to ceph-objectstore-tool: asserts when destroying SnapMapper::backend
Actions #2

Updated by Kefu Chai about 6 years ago

reproduciable on master almost 2 out of 5 times.

Actions #3

Updated by Kefu Chai about 6 years ago

we should "ch->flush()" before destroying SnapMapper.

Actions #4

Updated by Kefu Chai about 6 years ago

  • Category changed from OSD to Tests
  • Status changed from New to Fix Under Review
  • Assignee set to Kefu Chai
Actions #5

Updated by Kefu Chai about 6 years ago

  • Category deleted (Tests)
  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF