ceph-objectstore-tool: don't destroy SnapMapper until the txn is completed

ch->flush() only ensure that the op is dequeued from osr/collection's
queue. but the ops could be still in the flight and they could still be
holding a *weak* reference of SnapMapper. we should make sure that the
mapper is still available when they reference it,

Fixes: http://tracker.ceph.com/issues/23121
Signed-off-by: Kefu Chai <kchai@redhat.com>